got plots to programmatically generate higher res versions for pdf.

--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -760,7 +760,7 @@ Figure \@ref(fig:07-knn-mult-viz) visualizes the model's predictions overlaid on
 time the predictions are a surface in 3D space, instead of a line in 2D space, as we have 2
 predictors instead of 1.  
 
-```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "KNN regression model’s predictions represented as a surface in 3D space overlaid on top of the data using three predictors (price, house size, and the number of bedrooms). Note that in general we recommend against using 3D visualizations; here we use a 3D visualization only to illustrate what the surface of predictions looks like for learning purposes.", out.width="80%"}
+```{r 07-knn-mult-viz, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "KNN regression model’s predictions represented as a surface in 3D space overlaid on top of the data using three predictors (price, house size, and the number of bedrooms). Note that in general we recommend against using 3D visualizations; here we use a 3D visualization only to illustrate what the surface of predictions looks like for learning purposes.", out.width="100%"}
 xvals <- seq(from = min(sacramento_train$sqft), 
              to = max(sacramento_train$sqft), 
              length = 50)
@@ -781,12 +781,12 @@ plot_3d <- plot_ly() |>
     x = ~sqft,
     y = ~beds,
     z = ~price,
-    marker = list(size = 5, opacity = 0.4, color = "red")
+    marker = list(size = 2, opacity = 0.4, color = "red")
   ) |>
   layout(scene = list(
-    xaxis = list(title = "House size (square feet)"),
+    xaxis = list(title = "Size (sq ft)"),
     zaxis = list(title = "Price (USD)"),
-    yaxis = list(title = "Number of bedrooms")
+    yaxis = list(title = "Bedrooms")
   )) |>
   add_surface(
     x = ~xvals,
@@ -798,8 +798,8 @@ plot_3d <- plot_ly() |>
 if(!is_latex_output()){  
   plot_3d
 } else {
-  scene = list(camera = list(eye = list(x=2, y=2, z = 1.5)))
-  plot_3d <- plot_3d  %>% layout(scene = scene)
+  scene = list(camera = list(eye = list(x = -2.1, y = -2.2, z = 0.75)))
+  plot_3d <- plot_3d  |> layout(scene = scene)
   save_image(plot_3d, "img/plot3d_knn_regression.png", scale = 10)
   knitr::include_graphics("img/plot3d_knn_regression.png")
 }
