--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -6,6 +6,8 @@ knit: "bookdown::render_book"
 documentclass: krantz
 classoption:
   - krantz2
+header-includes: 
+- \usepackage{float}
 bibliography: [references.bib]
 biblio-style: plainnat
 link-citations: yes
@@ -19,6 +21,12 @@ description: "This is a textbook for teaching a first introduction to data scien
 github-repo: UBC-DSCI/introduction-to-datascience
 cover-image: img/chapter_overview.jpg
 ---
+
+```{r setup-pdf, include=FALSE}
+knitr::opts_chunk$set(fig.pos = "H",
+                      out.extra = "")
+
+```
 
 ```{r preface, child="preface-text.Rmd"}
 ```
