minor additional polish to vsn ctl

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -529,7 +529,7 @@ Finally, you will be taken to a page where you will be able to see
 and copy the personal access token you just generated (Figure \@ref(fig:generate-pat-03)). 
 Since it provides access to certain parts of your account, you should
 treat this token like a password; for example, you should consider 
-securely storing it using a password manager (and your other passwords and tokens, too!).
+securely storing it (and your other passwords and tokens, too!) using a password manager.
 Note that this page will only display the token to you once,
 so make sure you store it in a safe place right away. If you accidentally forget to
 store it, though, do not fret&mdash;you can delete that token by clicking the 
@@ -545,8 +545,9 @@ image_read("img/generate-pat_03.png")
 
 ### Cloning a repository using Jupyter 
 
-The first step is to *clone* the \index{git!clone} remote repository on GitHub to create a local repository,
-i.e., make a 
+Now that we have everything we need for authentication,
+the next step is to *clone* the \index{git!clone} remote repository on GitHub
+to create a local repository, i.e., make a 
 copy that knows where it was obtained from so that it knows where send/receive 
 new committed edits. In order to do this, first copy the URL from the HTTPS tab 
 of the Code drop down menu on GitHub (Figure \@ref(fig:clone-02)).
@@ -635,7 +636,7 @@ It is highly recommended to write useful and meaningful messages about what
 was changed. These commit messages, and the datetime stamp for a given 
 commit, are the primary means to navigate through the project's history in the 
  event that you need to view or retrieve a past version of a file, or 
-revert our project to an earlier state.
+revert your project to an earlier state.
 When you click the "Commit" button for the first time, you will be prompted to 
 enter your name and email. This only needs to be done once for each machine 
 you use Git on.
