minor ed to vsn ctl

--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -667,9 +667,9 @@ image_read("img/version_control/git_push_01.png")
 ```
 
 You will then be prompted to enter your GitHub username 
-and password. Instead of your password, though, you will 
-need to enter the personal access token that you generated
-earlier. Click the blue "OK" button to initiate the push (Figure \@ref(fig:git-push-02)).
+and the personal access token that you generated
+earlier (not your account password!). Click 
+the blue "OK" button to initiate the push (Figure \@ref(fig:git-push-02)).
 
 ```{r git-push-02, fig.cap = 'Enter your Git credentials to authorize the push to the remote repository.', fig.retina = 2, out.width="100%"}
 image_read("img/version_control/git_push_02.png")
