added kable_styling(latex_options = hold_position) to hold table positions

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -4,6 +4,7 @@
 library(formatR)
 library(plotly)
 library(knitr)
+library(kableExtra)
 
 knitr::opts_chunk$set(echo = TRUE, 
                       fig.align = "center")
@@ -502,7 +503,10 @@ math_table <- math_table %>%
 ```
 
 ```{r 05-multiknn-mathtable, echo = FALSE}
-knitr::kable(math_table, booktabs = TRUE, caption = "Evaluating the distances from the new observation to each of its 5 nearest neighbors", escape = FALSE)
+kable(math_table, booktabs = TRUE, 
+      caption = "Evaluating the distances from the new observation to each of its 5 nearest neighbors", 
+      escape = FALSE) |>
+  kable_styling(latex_options = "hold_position")
 ```
 
 The result of this computation shows that 3 of the 5 nearest neighbors to our new observation are
