--- a/viz.Rmd
+++ b/viz.Rmd
@@ -4,6 +4,8 @@
 library(tidyverse)
 library(cowplot)
 library(knitr)
+library(kableExtra)
+
 knitr::opts_chunk$set(fig.align = "center")
 ```
 
@@ -1472,7 +1474,8 @@ file_sizes <- tibble(`Image type` = c("Raster",
                         paste(round(file.info("img/faithful_plot.svg")["size"] 
                                     / 1000000, 2), "MB")))
 kable(file_sizes,
-      caption = "File sizes of the scatter plot of the Old Faithful data set when saved as different file formats.")
+      caption = "File sizes of the scatter plot of the Old Faithful data set when saved as different file formats.") |>
+  kable_styling(latex_options = "hold_position")
 ```
 
 Take a look at the file sizes in Table \@ref(tab:filesizes).
