resorted to screenshot because of overlapping points

--- a/classification1.Rmd
+++ b/classification1.Rmd
@@ -599,7 +599,7 @@ plot_3d <- scaled_cancer_3 |>
             z = ~Symmetry,
             color = ~Class,
             opacity = 0.4,
-            size = 5,
+            size = 2,
             colors = c("orange2", "steelblue2", "red"), 
             symbol = ~Class, symbols = c('circle','circle','diamond'))
 
@@ -638,9 +638,11 @@ plot_3d <- plot_3d  %>%
 if(!is_latex_output()){  
   plot_3d
 } else {
-  scene = list(camera = list(eye = list(x=2, y=2, z = 1.5)))
-  plot_3d <- plot_3d  %>% layout(scene = scene)
-  save_image(plot_3d, "img/plot3d_knn_classification.png", scale = 10)
+  # scene = list(camera = list(eye = list(x=2, y=2, z = 1.5)))
+  # plot_3d <- plot_3d  %>% layout(scene = scene)
+  # save_image(plot_3d, "img/plot3d_knn_classification.png", scale = 10)
+  # cannot adjust size of points in this plot for pdf 
+  # so using a screenshot for now instead
   knitr::include_graphics("img/plot3d_knn_classification.png")
 }
 ```
