added notes and links to worksheets

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -1158,6 +1158,17 @@ more. We have just scratched the surface of statistical inference; however, the
 material presented here will serve as the foundation for more advanced
 statistical techniques you may learn about in the future!
 
+## Exercises
+
+Practice exercises for the material covered in this chapter 
+can be found in the two accompanying worksheets([first](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_11/worksheet_11.ipynb) 
+and [second](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_12/worksheet_12.ipynb)).
+The worksheet tries to provide automated feedback 
+and help guide you through the problems. 
+To make sure this functionality works as intended, 
+please follow the instructions for computer setup needed to run the worksheets 
+found in Chapter \@ref(move-to-your-own-machine).
+
 ## Additional resources
 
 - Chapters 7 to 10 of [Modern Dive](https://moderndive.com/) provide a great next step in learning about inference. In particular, Chapters 7 and 8 cover sampling and bootstrapping using `tidyverse` and `infer` in a slightly more in-depth manner than the present chapter. Chapters 9 and 10 take the next step beyond the scope of this chapter and begin to provide some of the initial mathematical underpinnings of inference and more advanced applications of the concept of inference in testing hypotheses and performing regression. This material offers a great starting point for getting more into the technical side of statistics.
