--- a/regression1.Rmd
+++ b/regression1.Rmd
@@ -831,3 +831,13 @@ regression has both strengths and weaknesses. Some are listed here:
 1. becomes very slow as the training data gets larger
 2. may not perform well with a large number of predictors
 3. may not predict well beyond the range of values input in your training data
+
+## Exercises
+
+Practice exercises for the material covered in this chapter 
+can be found in the accompanying [worksheet](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_08/worksheet_08.ipynb).
+The worksheet tries to provide automated feedback 
+and help guide you through the problems. 
+To make sure this functionality works as intended, 
+please follow the instructions for computer setup needed to run the worksheets 
+found in Chapter \@ref(move-to-your-own-machine).
