--- a/version-control.Rmd
+++ b/version-control.Rmd
@@ -925,6 +925,16 @@ image_read("img/version_control/issue_06.png") %>%
   image_crop("3584x1900")
 ```
 
+## Exercises
+
+Practice exercises for the material covered in this chapter 
+can be found in the accompanying [worksheet](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_05/worksheet_05.ipynb).
+The worksheet tries to provide automated feedback 
+and help guide you through the problems. 
+To make sure this functionality works as intended, 
+please follow the instructions for computer setup needed to run the worksheets 
+found in Chapter \@ref(move-to-your-own-machine).
+
 ## Additional resources {#vc-add-res}
 
 Now that you've picked up the basics of version control with Git and GitHub, 
