--- a/setup.Rmd
+++ b/setup.Rmd
@@ -11,6 +11,7 @@ By the end of the chapter, readers will be able to:
 
 - install the Git version control software
 - install and launch a local instance of JupyterLab with the R kernel
+- download the exercises in the worksheets that accompany the chapters of this book from GitHub
 
 ## Installing software on your own computer
 
@@ -233,3 +234,15 @@ It is good practice to restart all the programs you used when installing this
 software stack before you proceed to doing your data analysis.
 This will ensure all the software and settings you put in place are 
 correctly sourced. This includes JupyterLab, terminal or Anaconda Prompt.
+
+## Downloading the worksheets for this book
+
+The worksheets containing practice exercises for this book 
+can be downloaded by visiting 
+[https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets)
+and clicking the green "Code" button and then selecting "Download ZIP".
+The worksheets are contained within the compressed folder that will be downloaded.
+They can be uncompressed/unzipped using tools from your computers filesystem
+and run using Jupyter. 
+See chapter \@ref(getting-started-with-jupyter) 
+for instructions on how to use Jupyter.
