--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1605,6 +1605,16 @@ Table: (#tab:summary-functions-table) Summary of wrangling functions
 | `select` | subsets columns of a data frame |
 | `summarize` | calculates summaries of inputs | 
 
+## Exercises
+
+Practice exercises for the material covered in this chapter 
+can be found in the accompanying [worksheet](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_03/worksheet_03.ipynb).
+The worksheet tries to provide automated feedback 
+and help guide you through the problems. 
+To make sure this functionality works as intended, 
+please follow the instructions for computer setup needed to run the worksheets 
+found in Chapter \@ref(move-to-your-own-machine).
+
 ## Additional resources 
 
   - As we mentioned earlier, `tidyverse` is actually an *R
