added preface text about worksheets; minor typo fixes in intro, setup

--- a/inference.Rmd
+++ b/inference.Rmd
@@ -1161,9 +1161,10 @@ statistical techniques you may learn about in the future!
 ## Exercises
 
 Practice exercises for the material covered in this chapter 
-can be found in the two accompanying worksheets([first](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_11/worksheet_11.ipynb) 
-and [second](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_12/worksheet_12.ipynb)).
-The worksheet tries to provide automated feedback 
+can be found in the two accompanying worksheets
+([first worksheet](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_11/worksheet_11.ipynb) 
+and [second worksheet](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_12/worksheet_12.ipynb)).
+The worksheets try to provide automated feedback 
 and help guide you through the problems. 
 To make sure this functionality works as intended, 
 please follow the instructions for computer setup needed to run the worksheets 
