--- a/setup.Rmd
+++ b/setup.Rmd
@@ -11,7 +11,7 @@ By the end of the chapter, readers will be able to:
 
 - install the Git version control software
 - install and launch a local instance of JupyterLab with the R kernel
-- download the exercises in the worksheets that accompany the chapters of this book from GitHub
+- download the worksheets that accompany the chapters of this book from GitHub
 
 ## Installing software on your own computer
 
@@ -239,10 +239,8 @@ correctly sourced. This includes JupyterLab, terminal or Anaconda Prompt.
 
 The worksheets containing practice exercises for this book 
 can be downloaded by visiting 
-[https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets)
-and clicking the green "Code" button and then selecting "Download ZIP".
-The worksheets are contained within the compressed folder that will be downloaded.
-They can be uncompressed/unzipped using tools from your computers filesystem
-and run using Jupyter. 
-See chapter \@ref(getting-started-with-jupyter) 
-for instructions on how to use Jupyter.
+[https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets),
+clicking the green "Code" button, and then selecting "Download ZIP".
+The worksheets are contained within the compressed zip folder that will be downloaded.
+Once you unzip the downloaded file, you can open the folder and run each worksheet
+using Jupyter. See Chapter \@ref(getting-started-with-jupyter) for instructions on how to use Jupyter.
