changed intro end figure to get rid of white bkg, blue bars

--- a/intro.Rmd
+++ b/intro.Rmd
@@ -612,13 +612,10 @@ n.o.s. with over 60,000 Canadian residents reporting it as their mother tongue.
 ### Putting it all together
 
 In the block of code below, we put everything from this chapter together, with a few
-modifications. In particular, we have
-added a few more layers to make the data visualization even more effective.
-Specifically, we changed the color of the bars and changed the background from
-grey to white to improve the contrast. We have also actually skipped the
+modifications. In particular, we have actually skipped the
 `select` step that we did above; since you specify the variable names to plot
 in the `ggplot` function, you don't actually need to `select` the columns in advance
-when creating a visualization. And finally, we provided *comments* next to 
+when creating a visualization. We have also provided *comments* next to 
 many of the lines of code below using the
 hash symbol `#`. When R sees a `#` sign, \index{comment} \index{aaacommentsymb@\#|see{comment}} it 
 will ignore all of the text that
@@ -641,17 +638,16 @@ ten_lang <- slice(arranged_lang, 1:10)
 # create the visualization
 ggplot(ten_lang, aes(x = mother_tongue,
                      y = reorder(language, mother_tongue))) +
-  geom_bar(stat = "identity", fill = "steelblue") +
+  geom_bar(stat = "identity") +
   xlab("Mother Tongue (Number of Canadians, 2016 Census)") +
-  ylab("Language") +
-  theme_bw() # use a theme to have a white background
+  ylab("Language") 
 ```
 
 This exercise demonstrates the power of R. In relatively few lines of code, we
 performed an entire data science workflow with a highly effective data
 visualization! We asked a question, loaded the data into R, wrangled the data
 (using `filter`, `arrange` and `slice`) and created a data visualization to
-help answer our question.  In this chapter, you got a quick taste of the data
+help answer our question. In this chapter, you got a quick taste of the data
 science workflow; continue on with the next few chapters to learn each of 
 these steps in much more detail!
 
