--- a/wrangling.Rmd
+++ b/wrangling.Rmd
@@ -1608,7 +1608,7 @@ Table: (#tab:summary-functions-table) Summary of wrangling functions
 ## Exercises
 
 Practice exercises for the material covered in this chapter 
-can be found in the accompanying [worksheet](https://ubc-dsci.github.io/data-science-a-first-intro-worksheets/worksheet_03/worksheet_03.ipynb).
+can be found in the accompanying [worksheet](https://github.com/UBC-DSCI/data-science-a-first-intro-worksheets/blob/main/worksheet_03/worksheet_03.ipynb).
 The worksheet tries to provide automated feedback 
 and help guide you through the problems. 
 To make sure this functionality works as intended, 
