Added authors and acknowledgements to pdf

--- a/pdf/index.Rmd
+++ b/pdf/index.Rmd
@@ -30,3 +30,6 @@ knitr::opts_chunk$set(fig.pos = "H",
 
 ```{r preface, child="preface-text.Rmd"}
 ```
+
+```{r preface, child="acknowledgements.Rmd"}
+```
