--- a/acknowledgements.Rmd
+++ b/acknowledgements.Rmd
@@ -1,2 +1,23 @@
 # Acknowledgments {-}
 
+We'd like to thank everyone that has contributed to the development of 
+[*Data Science: A First Introduction*](https://ubc-dsci.github.io/introduction-to-datascience/). 
+This is an open source textbook that began as a collection of course readings
+for a new introductory data science course 
+at the University of British Columbia (UBC), DSCI 100.
+Several faculty members in the UBC Department of Statistics 
+were pivotal in shaping the direction of that course, 
+and as such contributed greatly to the shape and direction of this book. 
+We would especially like to thank Matías Salibían-Barrera 
+for his great mentoring during the roll out of this course 
+and book in the early days.
+His door was always open to chat about how to best introduce 
+and teach data science our first year students.
+
+Much acknowledgements 
+and thanks to shaping this book goes to the DSCI 100 students.
+Their enthusiasm to learn data science sustained us during the hard work 
+of creating a new course and writing a textbook.
+Their patience when they uncovered bugs in the book was much needed.
+Their feedback on the book and the course, 
+really has contributed to making the book what it is today.
